# argon-gpl

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
argonc/: Cargo.toml
core/compiler/: Cargo.toml  build.rs  spqr_time_n_size.txt  time_count.txt  wrapper.h
core/compiler/examples/: defer.ar  fallback_basic.ar  fallback_inst.ar  func_out_of_order.ar  hierarchy.ar  if.ar  if_inconsistent.ar  immediate.ar  nested_inst.ar  param_int.ar  scopes.ar  sky130_inverter.ar  testing.ar  via.ar  via.cl  via_array.ar
core/compiler/examples/argon_workspace/: lib.ar  utils.ar
core/compiler/examples/argon_workspace/nested/: mod.ar  nested.ar
core/compiler/examples/enumerations/: lib.ar
core/compiler/examples/generic_tuple/: lib.ar
core/compiler/examples/rounding/: lib.ar
core/compiler/examples/seq_basic/: lib.ar
core/compiler/examples/sky130_inverter/: lib.ar
core/compiler/examples/via_array/: lib.ar
core/compiler/src/: SPQR.rs  argon.l  argon.y  ast.rs  cadlang.l  cadlang.y  cell.y  compile.rs  eigen_qr.cpp  lib.rs  main.rs  parse.rs  solver.rs  spqr_eigen.rs  std.ar
core/compiler/src/ast/: annotated.rs  mod.rs
core/gui/: Cargo.toml  README.md
core/gui/src/: actions.rs  assets.rs  canvas.rs  lib.rs  main.rs  project.rs  rpc.rs  socket.rs  theme.rs  toolbars.rs
core/gui/src/editor/: canvas.rs  input.rs  mod.rs  toolbars.rs
core/lang-server/src/: lib.rs
core/lsp-server/: Cargo.toml
core/lsp-server/src/: document.rs  import.rs  lib.rs  main.rs  rpc.rs  socket.rs
docs/figures/: argon_paper.ai  ~ai-95664506-dc15-4f9d-8644-1fd33723b6f0_.tmp
examples/any_type/: lib.ar
examples/argon_workspace/: lib.ar
gui/src/: canvas.rs
plugins/nvim/: README.md
plugins/nvim/ftplugin/: argon.lua
plugins/nvim/lua/argon_lsp/: client.lua  init.lua
plugins/nvim/lua/argon_lsp/commands/: gui.lua  init.lua
plugins/nvim/lua/argon_lsp/config/: init.lua
plugins/nvim/syntax/: argon.vim
plugins/vscode/: package-lock.json  package.json
plugins/vscode/client/src/: extension.ts
