[workspace]

resolver = "2"
members = ["core/compiler", "core/gui", "core/lang-server"]

[workspace.dependencies]
anyhow = "1"
cfgrammar = { version = "0.13", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
approx = "0.5"
rust_decimal = "1"
rust_decimal_macros = "1"
indexmap = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rgb = { version = "0.8", features = ["serde"] }
thiserror = "2"
toml = "0.9"
regex = "1"
arcstr = { version = "1", features = ["serde"] }
itertools = "0.14"
tarpc = { version = "0.37", features = ["full"] }
lrlex = "0.13"
lrpar = "0.13"
bytes = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tower-lsp-server = "0.22"

geometry = { version = "0.7", registry = "substrate" }
enumify = { version = "0.2", registry = "substrate" }
