[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
cfgrammar = { version = "0.13", features = ["serde"] }
lrlex = "0.13"
lrpar = "0.13"
good_lp = { version = "1", features = [
    "scip",
    "scip_bundled",
], default-features = false }
itertools = "0.14"
ena = "0.14"
enumify = { version = "0.2.1", registry = "substrate" }
gds21 = "0.2"
arcstr = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
derive-where = "1"
nalgebra = "0.33.2"
approx = "0.5"
rust_decimal = "1"
rust_decimal_macros = "1"

[build-dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = { version = "0.13", features = ["serde"] }
