[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
derive-where = { version = "1", features = ["serde"] }
nalgebra = "0.34"
klayout-lyp = "0.1.1"

anyhow = { workspace = true }
cfgrammar = { workspace = true }
lrlex = { workspace = true }
lrpar = { workspace = true }
itertools = { workspace = true }
enumify = { workspace = true }
arcstr = { workspace = true }
serde = { workspace = true }
approx = { workspace = true }
indexmap = { workspace = true }
geometry = { workspace = true }
rgb = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
gds21 = "0.2"

[build-dependencies]
lrpar = { version = "0.13", features = ["serde"] }

cfgrammar = { workspace = true }
lrlex = { workspace = true }
