[package]
name = "lsp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
compiler = { version = "0.1.0", path = "../compiler" }

tokio = { version = "1.20", features = ["full"] }
tower-lsp = "0.20"
portpicker = "0.1"
tokio-util = { version = "0.7.15", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.2"
bytes = "1"
cfgrammar = { version = "0.13" }
itertools = "0.14"
